--- a/index.html
+++ b/index.html
@@ -328,27 +328,41 @@ function saveFinalData() {
     saved.push(finalData);
     localStorage.setItem("raportData", JSON.stringify(saved));
 
-    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbx98MOHZOr-c4ILYRdS03K5N-k0oUsfM7kf26DaMYiljbMLapyR3st3W5wDuGROIA/exec";
+    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbyzqJuT1XZ15QtOrPsbpkNCdO3BzkZIRnnSYAxYfLK0Rgsy7jQLi_n7y8K-1sIYjp7k/exec";
 
     fetch(WEB_APP_URL, {
-    method: "POST",
-    body: JSON.stringify(finalData)
+  method: "POST",
+  headers: {
+    "Content-Type": "application/json"
+  },
+  body: JSON.stringify(finalData)
 })
-.then(res => res.text())
-.then(text => {
-    console.log("GAS RAW RESPONSE:", text);
-    const res = JSON.parse(text);
+.then(function(res) {
+  return res.text();
+})
+.then(function(text) {
 
-    if (res.status === "success") {
-        alert("Data berhasil disimpan ke Google Sheets!");
-    } else {
-        alert("Gagal: " + res.message);
-    }
+  console.log("GAS RAW RESPONSE:", text);
+
+  var res;
+  try {
+    res = JSON.parse(text);
+  } catch (e) {
+    alert("Respon bukan JSON");
+    return;
+  }
+
+  if (res.status === "success") {
+    alert("Data berhasil disimpan ke Google Sheets!");
+  } else {
+    alert("Gagal: " + res.message);
+  }
+
 })
-.catch(err => {
-    console.error("FETCH ERROR:", err);
-    alert("Gagal mengirim data (CORS fixed version)");
+.catch(function(err) {
+  alert("Fetch error: " + err);
 });
+
 }
 
 // ====================== LOAD DATA LOKAL ======================
