--- a/index.html
+++ b/index.html
@@ -328,39 +328,26 @@ function saveFinalData() {
     saved.push(finalData);
     localStorage.setItem("raportData", JSON.stringify(saved));
 
-    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycby0NHua72PVlEMAsjgK_7MchSGRxaXou9eNt_MT-meReTgEu-fgfPxoCX2omZCO8j-Z/exec";
+    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbxBisSoobjxCPF8FPM9vp3FfO7GukAPXBtpzvTpzf5AYmNqAzbPsMvp_PcCNl_3JOgH/exec";
 
-    fetch(WEB_APP_URL, {
-  method: "POST",
-  headers: {
-    "Content-Type": "application/json"
-  },
-  body: JSON.stringify(finalData)
+fetch(WEB_APP_URL, {
+    method: "POST",
+    body: JSON.stringify(finalData)
 })
-.then(function(res) {
-  return res.text();
+.then(res => res.text())
+.then(text => {
+    console.log("RESPON GAS:", text);
+    const result = JSON.parse(text);
+
+    if (result.status === "success") {
+        alert("Data berhasil disimpan ke Google Sheets!");
+    } else {
+        alert("Gagal: " + result.message);
+    }
 })
-.then(function(text) {
-
-  console.log("GAS RAW RESPONSE:", text);
-
-  var res;
-  try {
-    res = JSON.parse(text);
-  } catch (e) {
-    alert("Respon bukan JSON");
-    return;
-  }
-
-  if (res.status === "success") {
-    alert("Data berhasil disimpan ke Google Sheets!");
-  } else {
-    alert("Gagal: " + res.message);
-  }
-
-})
-.catch(function(err) {
-  alert("Fetch error: " + err);
+.catch(err => {
+    console.error("FETCH ERROR:", err);
+    alert("Gagal mengirim data ke Google Sheets");
 });
 
 }
@@ -380,4 +367,4 @@ function loadSaved() {
 </script>
 
 </body>
-</html>
+   </html>
